Cambiar la fuente del texto del cuadro de dialogo de los ajustes en cada cabio